# test-api

./: .gitignore  Dockerfile  README.md  compose.yml  flake.nix  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
terraform/: .gitignore  main.tf  outputs.tf  variables.tf
tests/: test_main.py
