[project]
name = "test-ci"
version = "0.1.0"
description = ""
authors = [
    {name = "bhwk",email = "bryanhawaikit@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "prometheus-client (>=0.22.1,<0.23.0)"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
